# QuamStateManager

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  node_modules  pyproject.toml
.github/workflows/: ci.yml
docs/: 00_overview.md  01_pointer_resolver.md  02_loader.md  03_scanner.md  04_search_index.md  05_query.md  06_modifier.md  07_saver.md  08_differ.md  09_cli.md  10_web.md  11_templates.md  12_desktop.md  13_pyinstaller.md  14_integration_tests.md  15_web_redesign_progress.md  16_advanced_ui_features.md  17_dataset_ux_enhancements.md  18_dark_mode_and_recent_features.md  19_plot_click_to_edit_and_2q_rb.md  20_param_history.md  21_multi_chip_support.md  22_session_persistence_and_workspace_auto_populate.md  23_param_history_performance.md  24_param_history_ux_polish.md  25_dataset_virtual_scroll.md  26_browse_test_isolation_fix.md  27_config_generator.md  28_conflict_safe_io.md  29_gate_operations.md  30_config_viewer.md  31_lf_fem_delay.md  32_red_team_phase_2.md  33_dev_setup.md  34_red_team_phase_3.md  35_chip_compare.md  35_red_team_phase_4.md  36_plot_click_confirm_popup.md  37_red_team_phase_5.md  38_interactive_tab_coverage.md  (+23 more)
docs/examples/: _result.json  sample_spec_3q.json  sample_spec_multichassis.json
quam_state_manager/: __init__.py  __main__.py  cli.py  main.py
tests/: all_values_v2_selfcheck.cjs  bulk_dyncols_selfcheck.cjs  calc_selfcheck.cjs  compare_hub_selfcheck.cjs  cr_fixtures.py  ctrlz_selfcheck.cjs  explorer_crud_selfcheck.cjs  explorer_paths_selfcheck.cjs  folder_browser_selfcheck.cjs  generate_crwiring_selfcheck.cjs  generate_czorder_selfcheck.cjs  generate_naming_selfcheck.cjs  generate_nav_selfcheck.cjs  generate_pairpop_selfcheck.cjs  generate_popnav_selfcheck.cjs  generate_power_selfcheck.cjs  generate_presets_selfcheck.cjs  generate_preview_selfcheck.cjs  generate_step4_layout_selfcheck.cjs  generate_topoboard_selfcheck.cjs  generate_twpa_selfcheck.cjs  generate_validation_selfcheck.cjs  ndview_selfcheck.cjs  test_all_values.py  test_all_values_route.py  test_all_values_v2.py  test_apply_preserves_surface.py  test_archive.py  test_autofit_auditor.py  test_autofit_e2e.py  test_autofit_engine.py  test_autofit_gates.py  test_autofit_plan_writer.py  test_autofit_power_rows.py  test_autofit_realbackend.py  test_autofit_replay_real.py  test_autofit_routes.py  test_autofit_scenarios.py  test_autofit_synth.py  test_autofit_v2_loop.py  (+148 more)
(+261 files in other folders)
